--- a/x455/bloom website/index.html
+++ b/x455/bloom website/index.html
@@ -156,7 +156,7 @@ font-size: 5em;
             <img
                 class="demo w3-opacity w3-hover-opacity-off"
                 src="./images/Bloom Website Images/Flower-and-vine-mikhail-nilov-6933164.jpg"
-                style="width: 100%; cursor: pointer"
+                style="width: 100%;cursor: pointer"
                 onclick="currentDiv(2)"
                 />
         </div>
@@ -164,7 +164,7 @@ font-size: 5em;
             <img
                 class="demo w3-opacity w3-hover-opacity-off"
                 src="./images/Bloom Website Images/Monitor-graph.jpg"
-                style="width: 100%; cursor: pointer"
+                style="width: 100%;cursor: pointer"
                 onclick="currentDiv(3)"
                 />
         </div>
@@ -493,7 +493,7 @@ font-size: 5em;
 <div class="w3-row">
         <div class="w3-col s4 w3-center">
         <iframe
-            style="width:100%"
+            style="width:100%; height: 20%"
             src="https://www.youtube.com/embed/RZBfUkMhZdQ?si=XRA6o2Rn6ui9eayd" 
             title="YouTube video player"
             frameborder="10"
@@ -503,7 +503,7 @@ font-size: 5em;
         </div>
         <div class="w3-col s4 w3-center">
         <iframe
-            style="width: 100%"
+            style="width:100%; height: 20%"
             src="https://www.youtube.com/embed/6pY7EjqD3QA?si=1AN8jUZ-_5PtaRVb" 
             title="YouTube video player"
             frameborder="10"
@@ -513,7 +513,7 @@ font-size: 5em;
         </div>
         <div class="w3-col s4 w3-center">
         <iframe
-            style="width: 100%"
+            style="width:100%; height: 20%"
             src="https://www.youtube.com/embed/j4QlG5jKpio?si=baBnxNWNXeKd7kW1" 
             title="YouTube video player"
             frameborder="10"
@@ -523,7 +523,7 @@ font-size: 5em;
         </div>
         <div class="w3-col s4 w3-center">
             <iframe
-                style="width: 100%"
+                style="width:100%; height: 20%"
                 src="https://www.youtube.com/embed/FD0hw-edAqc?si=1zsdqJ7st8a9BNwp" 
                 title="YouTube video player"
                 frameborder="10"
@@ -533,7 +533,7 @@ font-size: 5em;
             </div>
         <div class="w3-col s4 w3-center">
             <iframe
-                style="width: 100%"
+                style="width:100%; height: 20%"
                 src="https://www.youtube.com/embed/QGeHS4jO0X0?si=O2fZ0E8yz4e_StFQ" 
                 title="YouTube video player"
                 frameborder="10"
@@ -543,7 +543,7 @@ font-size: 5em;
         </div>
         <div class="w3-col s4 w3-center">
             <iframe
-                style="width: 100%"
+                style="width:100%; height: 20%"
                 src="https://www.youtube.com/embed/hYZG8qnS2T4?si=rU6QUZc8Z8g8QrZc" 
                 title="YouTube video player"
                 frameborder="10"
